--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#testimonials">Testimonial</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <h1 class="logo">Puenzo Restraunt</h1>
+            <h1 class="logo">Puenzo</h1>
         </div>
     </nav>
     <section class="showcase-area" id="showcase">
